# antigravity-coordinator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_dq_manual.py
.github/workflows/: ci.yml
.ralph-tui/: progress.md  session-meta.json  session.json
src/coordinator/: __init__.py  cli.py
src/coordinator/api/: __init__.py  server.py
src/coordinator/delegation/: __init__.py  decomposer.py  evolution.py  executor.py  four_ds.py  models.py  router.py  taxonomy.py  trust_ledger.py
src/coordinator/engine/: __init__.py  conflict.py  distribution.py  executor.py  orchestrator.py  registry.py
src/coordinator/feedback/: __init__.py  ace_analyzer.py  optimizer.py
src/coordinator/optimization/: __init__.py  entropy_allocator.py  pattern_detector.py  topology_selector.py
src/coordinator/safety/: __init__.py  guardrails.py
src/coordinator/scoring/: README.md  __init__.py  complexity_analyzer.py  default_baselines.json  dq_scorer.py
src/coordinator/storage/: __init__.py  database.py
src/coordinator/strategies/: __init__.py  base.py  full.py  implement.py  research.py  review.py  team.py
tasks/: prd-antigravity-coordinator.md  prd.json
tests/: test_api.py  test_cli.py  test_database.py  test_delegation.py  test_engine.py  test_feedback.py  test_optimization.py  test_safety.py  test_scoring.py  test_strategies.py
