[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antigravity-coordinator"
version = "0.1.0"
description = "Self-optimizing multi-agent coordinator with DQ scoring, ACE consensus, and research-driven feedback loops"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Dicoangelo", email = "dicoangelo@metaventions.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sqlite-utils>=3.37",
    "rich>=13.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.8",
    "httpx>=0.28",
]

[project.scripts]
coord = "coordinator.cli:main"
coord-api = "coordinator.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coordinator"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
